# Tools_Hackaton_BackEnd

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
app/: main.py
app/abstractions/: unitofwork.py
app/api/: passes.py  routers.py  users.py
app/config/: database.py  main.py
app/daos/: api.py  base.py
app/dependencies/: unitofwork.py  users.py
app/exceptions/: bad_request.py  base.py  created.py  forbidden.py  not_found.py  success.py  to_many_requests.py
app/exceptions/passes/: exceptions.py
app/exceptions/users/: exceptions.py
app/migrations/: env.py
app/migrations/versions/: 491f2895819e_init.py  fe6f2596a04d_init.py
app/models/: enums.py  passes.py  users.py
app/repositories/: base.py  passes.py  refresh_session.py  users.py
app/schemas/: exceptions.py  passes.py  users.py
app/services/: passes.py  users.py
environments/: .env.dev  .env.dev.docker  .env.prod.docker
nginx/: Dockerfile  nginx.conf
